# golfplusplus

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  gb.cmd  gb.ps1  notes.md  todo.md
assets/audio/: sounds.json
assets/clubs/: driver.json  four_wood.json  nine_iron.json  pitching_wedge.json  putter.json  sand_wedge.json  seven_iron.json  seven_wood.json
assets/course_worlds/: marienlyst_golfklub.json
assets/courses/: course_01.json  marienlyst_golfklub.json  odder_golfklub.json  test_eighteen.json
assets/holes/: marienlyst_golfklub_h01.json  marienlyst_golfklub_h02.json  marienlyst_golfklub_h03.json  marienlyst_golfklub_h04.json  marienlyst_golfklub_h05.json  marienlyst_golfklub_h06.json  odder_golfklub_h01.json  odder_golfklub_h02.json  odder_golfklub_h03.json  odder_golfklub_h04.json  odder_golfklub_h05.json  odder_golfklub_h06.json  odder_golfklub_h07.json  odder_golfklub_h08.json  odder_golfklub_h09.json  odder_golfklub_h10.json  odder_golfklub_h11.json  odder_golfklub_h12.json  odder_golfklub_h13.json  odder_golfklub_h14.json  odder_golfklub_h15.json  odder_golfklub_h16.json  odder_golfklub_h17.json  odder_golfklub_h18.json  test.json  test2.json  test3.json
assets/quests/: starter_cash.json
assets/shaders/: ball.frag  crt.vert  terrain.frag
assets/shops/: pro_counter.json  range_rat.json  starter_shack.json
core/: app.cpp  app.h  event_loop.cpp  event_loop.h  gl_loader.cpp  gl_loader.h  input.h  main.cpp  window.cpp  window.h
docs/: ideas.md  notes.md  oom.md
quest/: quest_definition.h  quest_engine.cpp  quest_engine.h  quest_loader.cpp  quest_loader.h
src/audio/: audio_engine.cpp  audio_engine.h  audio_manifest.cpp  audio_manifest.h
src/game/: asset_resolver.cpp  asset_resolver.h  cloud_save.cpp  cloud_save.h  club_definition.h  club_loader.cpp  club_loader.h  course_definition.h  course_loader.cpp  course_loader.h  course_world_definition.h  course_world_loader.cpp  course_world_loader.h  game_content.cpp  game_content.h  game_state.cpp  game_state.h  game_tuning.cpp  game_tuning.h  hole_data.h  hole_loader.cpp  hole_loader.h  progression.cpp  progression.h  round_state.cpp  round_state.h  save_data.cpp  save_data.h  save_manager.cpp  save_manager.h  scorecard.cpp  scorecard.h  shop.cpp  shop.h  swing.cpp  swing.h
src/physics/: ball_physics.cpp  ball_physics.h  ball_state.h  club_stats.h  collision.cpp  collision.h  flight_model.cpp  flight_model.h  material_zone.h  physics_tuning.h  terrain.cpp  terrain.h  tree_collision.cpp  tree_collision.h  wind.cpp  wind.h
src/renderer/: framebuffer.cpp  framebuffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h
tests/: audio_manifest_tests.cpp  game_tests.cpp  physics_tests.cpp
tooling/: README.md  hole-editor.html  osm_golf_convert.py  test_osm_golf_convert.py
windows/: golfpp.rc
